[gd_scene load_steps=2 format=3 uid="uid://cpt3m5ii0nkby"]

[ext_resource type="Script" path="res://open_game.gd" id="1_iu6vy"]

[node name="Node" type="Node"]
script = ExtResource("1_iu6vy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="name text" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.358025
anchor_right = 0.457465
anchor_bottom = 0.393519
offset_left = -136.0
offset_top = -21.0
offset_right = -117.0
offset_bottom = -21.0001
text = "<NAME>"
metadata/_edit_use_anchors_ = true

[node name="name" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.395062
anchor_right = 0.597222
anchor_bottom = 0.45679
offset_left = -136.0
offset_top = -21.0
offset_right = -136.0
offset_bottom = -21.0
placeholder_text = "<NAME_P>"
metadata/_edit_use_anchors_ = true

[node name="ip text" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.493827
anchor_right = 0.476563
anchor_bottom = 0.529321
offset_left = -136.0
offset_top = -21.0
offset_right = -141.0
offset_bottom = -21.0
text = "<IP>"
metadata/_edit_use_anchors_ = true

[node name="ip" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.530864
anchor_right = 0.597222
anchor_bottom = 0.592593
offset_left = -136.0
offset_top = -21.0
offset_right = -136.0
offset_bottom = -21.0
placeholder_text = "192.168.0.0"
metadata/_edit_use_anchors_ = true

[node name="join" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513889
anchor_top = 0.617284
anchor_right = 0.611111
anchor_bottom = 0.666667
offset_left = -136.0
offset_top = -21.0
offset_right = -136.0
offset_bottom = -21.0
text = "<JOIN>"
metadata/_edit_use_anchors_ = true

[node name="host" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402778
anchor_top = 0.617284
anchor_right = 0.5
anchor_bottom = 0.666667
offset_left = -136.0
offset_top = -21.0
offset_right = -136.0
offset_bottom = -21.0
text = "<HOST>"
metadata/_edit_use_anchors_ = true

[node name="setting" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0208333
anchor_top = 0.888889
anchor_right = 0.131944
anchor_bottom = 0.950617
text = "<SETTING>"
metadata/_edit_use_anchors_ = true

[node name="exit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.888889
anchor_top = 0.888889
anchor_right = 0.972222
anchor_bottom = 0.950617
text = "<EXIT>"
metadata/_edit_use_anchors_ = true

[node name="la" type="OptionButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.847222
anchor_top = 0.0493827
anchor_right = 0.958333
anchor_bottom = 0.123457
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "<EN>"
popup/item_0/id = 0
popup/item_1/text = "<TH>"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 576.0
offset_top = 168.0
offset_right = 678.0
offset_bottom = 191.0
text = "Local Servers"

[node name="local" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 576.0
offset_top = 192.0
offset_right = 896.0
offset_bottom = 456.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/local"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 256.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/local/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="re" type="Button" parent="Control"]
layout_mode = 0
offset_left = 800.0
offset_top = 464.0
offset_right = 892.0
offset_bottom = 495.0
text = "Refresh"

[connection signal="pressed" from="Control/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Control/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Control/exit" to="." method="_on_exit_pressed"]
[connection signal="item_selected" from="Control/la" to="." method="_on_la_item_selected"]
[connection signal="pressed" from="Control/re" to="." method="_on_re_press"]
